syntax = "proto3";

option go_package = "./pb";

package my_service;

service MyService {
  rpc MyMethod(MyRequest) returns (MyResponse) {}
}

message MyRequest {
  string name = 1;
}

message MyResponse {
  string message = 1;
  string name = 2;
}